--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <div class="cartao_conteudo_pergunta">
             <p>Qual atleta é conhecido como o Rei?</p>
         </div>
+        <section>
+        </section>
+        <div class="cartao_conteudo-resposta">
+            <p>Ronnie Coleman</p>
+        </div>
+        <section></section>
 </main>
 <body>
     
